--- a/python/rnn.ipynb
+++ b/python/rnn.ipynb
@@ -30,7 +30,7 @@
       "memory_limit: 268435456\n",
       "locality {\n",
       "}\n",
-      "incarnation: 10482327644642535398\n",
+      "incarnation: 16683986875084193420\n",
       "]\n"
      ]
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -280,16 +280,28 @@
     "\n",
     "nhidden = [16] # e.g. [512, 512]\n",
     "dropout = 0.1\n",
+    "nlayers = len(nhidden)\n",
+    "INSIZE = 256\n",
+    "OUTSIZE = 256\n",
     "\n",
     "model = Sequential()\n",
-    "model.add(LSTM(nhidden[0], return_sequences=False, input_shape=(unroll, 256)))\n",
-    "#model.add(LSTM(nhidden[0], return_sequences=True, input_shape=(unroll, 256)))\n",
-    "#model.add(Dropout(dropout))\n",
-    "#model.add(LSTM(nhidden[1], return_sequences=False))\n",
+    "if nlayers > 1:\n",
+    "    for i in range(nlayers-1):\n",
+    "        model.add(LSTM(nhidden[i],\n",
+    "                       return_sequences=True,\n",
+    "                       input_shape=(unroll, INSIZE)))\n",
+    "        model.add(Dropout(dropout))\n",
+    "    model.add(LSTM(nhidden[nlayers-1],\n",
+    "                   return_sequences=False))\n",
+    "else:\n",
+    "    model.add(LSTM(nhidden[0],\n",
+    "                   return_sequences=False,\n",
+    "                   input_shape=(unroll, INSIZE)))\n",
     "model.add(Dropout(dropout))\n",
-    "model.add(Dense(256))\n",
+    "model.add(Dense(OUTSIZE))\n",
     "model.add(Activation('softmax'))\n",
     "model.compile(loss='categorical_crossentropy', optimizer='rmsprop')\n",
+    "\n",
     "model.summary()"
    ]
   },
@@ -302,15 +314,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "# either load weights:\n",
-    "wt_path = \"../sdata/\"\n",
-    "model.set_weights(np.load(wt_path+\"model_from_big_domain_string_1.gz_arch_16_unroll_20_step_3_dropout_0.1.npy\"))"
+    "wt_path = \"../models/\"\n",
+    "model.set_weights(np.load(wt_path+\"model_from_big_domain_string_1.gz_arch_256_16_unroll_20_step_3_dropout_0.1.npy\"))"
    ]
   },
   {
@@ -364,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -377,65 +389,61 @@
       "\n",
       " --------------------------------------------------\n",
       "Seed:\n",
-      "/50-to-100/sale/yes/\n",
+      "s/Windows-Network-St\n",
       " --------------------------------------------------\n",
-      "/50-to-100/sale/yes/xliahmo-tabetsposs-ach-alig_c_3/tai/images.jp-ger-siamo-testwy-tir.html\n",
-      "/imeded-du-imi2-7\n",
-      "/statial-corney/fouuntie_uolounhd/w-firc-5\n",
-      "/mocjo-rhobii/0-im\n",
-      "/\n",
-      "/noiphon-dechS\n",
-      "/granrgri/wenga-\n",
-      "/thicts\n",
-      "/capegof2/ipterber/poymantess/saloaoi-th-diren-evr/\n",
-      "/logdenc-xory50961146336071\n",
+      "s/Windows-Network-Stren-mnnatonen-coeker-1cab713/imaaters/huri/wwAve-me-veet-dese/\n",
+      "/4810nd-atere_3084202046.jpc/Qlg,aeil-eorchen/\n",
+      "/untoonglo/miss16.nobuleberlameeaalanfstor-cortiit-ked/5545/114824915/2_/T061D17117477\n",
+      "/Seu-735-MolluCmlauting/cansic/1200_216/-insor_e-/uiu\n",
+      "/firsi_spustics\n",
+      "/2011/\n",
+      "/fancers/spenarl-killiom45--AlcFaet/llcvelmo_%D9%82%D8%AF%D8\n",
+      "//Teuldel_U_YBGIileLrUEodgx235024103i-gI97Mn48/10/Veitomsg5z01559679A\n",
+      "/chepbued/amerprorwors/upris-vidIgo3-kodcbelenuar_.com\n",
+      "/p.tmg\n",
+      "/es/SSc75d271627_misssr.com/\n",
+      "/e013366daunfcbatal-oatize-lia-bid-hennn-50207.fs\n",
+      "/rtvtes-cant-wate\n",
+      "/wst.1/20A3nmacir/nern-taacy-sybinnitore/kobms.html\n",
+      "/2016/02/4223256228046kpauca1.jpg\n",
+      "/ades_sevyds\n",
+      "\n",
+      "/thomo/midio-21_da0ea5dSdt-/C17/7a0aeet-2b0-16017008x67.jpg\n",
+      "/es/radopenn-eiaris-mowasnex/973980-ioch-bley-iloie-pult/63066x-17.html\n",
+      "/besdien-cratraviglen/bsice.html\n",
+      "/remknip-skaaloy/porch_vgRors__E1d3f/e7%g%B6%D8%AA%D%D6%P0%D-%aC%D8%D0%15%81%93%/3\n",
+      "/dindufoagiag\n",
+      "/indec/yitse/2Anoes/356modecStepraarinos-tarf0aHRL/gpre/marelogxs/0s20140/4s/pataballa/malowwiy/vik-bua-532/yhetosur_xfnakunchuscagst-tles/54\n",
+      "/colter-217/10/povs-talri.656_x36101104777\n",
+      "/tictenter/pary/enni-coitgikhl20_tasiom.jpg.php\n",
+      "/manp-po/dact24788815/t43c48.html\n",
+      "/oumen/\n",
+      "/contiht/115814.jpg\n",
+      "/contpp/hefciptulo-ce-kezh-nbecks/1171.jpg\n",
+      "/bouniner-ba__midar/_33921/mow/3s/terits/x/sost-4k39/alunne-tow-17439fx22Sw/01163607sf890/1/0/292/sosteldis/hrops/Neugy\n",
+      "/contont/indymilem/\n",
+      "/nevlalt/\n",
+      "/chescyridie/parerin-tazenr-sara-bralilles-Bels/lenes-sraests/i/mijaryyytix/cmgg/talticna-tlogiaber/mpicleakinie/spoone/Shop_seofil-saantis/2/harcleluk-toen-kalan-ao-tastri/9.ostter\n",
+      "/pros/nuwe-tioa-alrtorire-lartrar-dermasels/hondingulre-greey/20179.html\n",
       "\n",
       "\n",
       "\n",
-      "wwwaxacobmad.tihipmobtsx/hsp-trebod-bre-tanamoa-den.asplw/rincYxp70_nile\n",
-      "/oonuma-hirlali/c-128/\n",
-      "/siation/warylead/caslach/5bs_contute-meus.html\n",
-      "/10/hef-ec5626530.raezonbcr\n",
-      "/vendlak.html\n",
-      "\n",
-      "\n",
-      "\n",
-      "vot.naeatulfebloamye.antesligense.ps\n",
-      "/iwi\n",
       "\n",
       "\n",
       "\n",
       "\n",
-      "wwwcododdbenmi.com\n",
       "\n",
-      "\n",
-      "/46naob/massa-en+tiod-ge/niri/\n",
-      "/tutss-faye/pamedyinery-Fula-Ber/hefextr/peruntsebam-evfrc7dcb/tarc-capiya-ucarut-ets_\n",
-      "/uates/centanlers-it-bolbshiana/categorex-dat-tbo-turt\n",
-      "/snoi-dunsdounki-012984714100811/w8529i//Deverh-Sp-Neacher/77135213168.jpg\n",
-      "/h-uaten/\n",
-      "/Ssovggowieeri_sCttding/3767.1379491.103000b4926022x30\n",
-      "/homauspilurcen-chinndc9_norissoagegef\n",
-      "/catiatey-oont/img/reinla_Cult-ue-cit/detakobots/biart-3alf/fenche-prodyitalnts/pra-rodki-pony-klrinihads-2776/sowcatonise-ipicam/ploize-kineirgy/inder-6n7/iandions/\n",
-      "/quat-mdergolGousVuiga-l-ew/lCem/MATr-84720rA205as5_75s_cortlyeertald/emagig-lowe/1747.html\n",
-      "/calchilen/\n",
-      "/wwrlut-15.html\n",
+      "/shzlbm-1c9shc-we-dlopacatew--ka.htm\n",
+      "/elseseconubkslospolle-cric-gennes//eprosombo-homeloman-gida-tiges.html\n",
+      "/folosticepcatazery-homraratene-chos-/5460-conteriayw-idpn-hadasermackay/letelion/seser/nston/gashmagfillnomaunustHonittSisi-ut/cat/ceden_inmloi/sarchationy/catearie-sarinc.jpg\n",
       "\n",
       "\n",
       "\n",
-      "w\n",
-      "www.ssiomodcikxve.jg\n",
-      "/dinigitotensin/wenorii/casno-gagerobv-isban/ib/intkM.phg\n",
-      "/adioan/sigunbiag.com\n",
-      "/397a9.html\n",
-      "/t-tag/ver-matarinii-2mst/hws/le-hochy06--abana-chits-sirs-leyniec-ouduly-catial-shovbanaikk-lanchine/msd96.html\n",
-      "/blbotunsss/ler/owji3eal.jpg\n",
-      "/imocit-cjthbtin-ashrkkifo/lemaini2_citihys/\n",
-      "/tag/ac/19/neunw0_ut/seving/_Vutici/wmfT.html\n",
-      "/ploaump/%ecuating/son-lufibi-colmits.pt9\n",
-      "/riright-catibi-/0nes-1300.png\n",
-      "/fosphan-pecfa/cort_tas_AArRaacom-2u-2f7701743714f/04/\n",
-      "/matissowobore-60_846.ne4.j"
+      "\n",
+      "\n",
+      "/desce\n",
+      "/log-categoro-s-adssefeme\n",
+      " --------------------------------------------------\n"
      ]
     }
    ],
@@ -456,7 +464,7 @@
     "for i in range(quote_length):\n",
     "    x = np.zeros((1, unroll, 256))\n",
     "    for t,b in enumerate(generated):\n",
-    "        x[0, t, byte_idx[b]] = 1.\n",
+    "        x[0, t, byte_idx[b]] = 1.0\n",
     "\n",
     "    preds = model.predict(x, verbose=0)[0]\n",
     "    next_index = sample(preds, temperature=temp)\n",
